Revision history for Transposome

Version	Date	Location
0.08.1	12/08/14	Vancouver, BC

- Fix a bug with Transposome::Run::Blast class not being
  able to find executables.

0.08.0	12/07/14	Vancouver, BC

- Rework annotation method by removing use of 'each' operator, which
  fixes a bug determining TE family name.
- Lower version requirement to 5.10 from 5.12, because of the above change.
- Improve installation instructions in the README file by putting deps in one command
  and removing the need to install cpanminus. Also, improve wiki documentation for
  installation and configuration of the package.
- Rename main test class from "TestUtils" to "TestFixture" because that is a more appropriate name.
  When used with the aliased module in tests, it is now very clear what "TestFixture->new()"
  is doing, which is setting up test data.

0.07.9	11/26/2014	Vancouver, BC

- Rework test framework to be under the Transposome namespace. This
  will make maintenance and adding new features/tests much simpler.
  This also avoids hardcoding paths in test files or manually add the
  include paths.
- Add mgblast and formatdb executables for Linux to be installed, which will keep
  users (at least on Linux) from having to compile this by hand.
- Remove use of MooseX roles for handling options in favor of core Getopt::Long.
- Reduce verbosity in log by not logging output of each blast process. Clean up 
  log formatting for readability.
- Rework tests to use local bin, so tests will pass without modifying the PATH.
- Add configuration details to log.
- Update documentation for all options to main application.

0.07.8	11/05/2014	Vancouver, BC

- Remove use of BerkeleyDB for indexing methods and use SQLite
  instead. This makes installation easier as the BerkeleyDB module
  required C libraries installed at the system level. Also, this change
  adds a major improvement in performance for large data sets.
- Fix dependencies listed in Makefile (YAML was listed, though it is